--- a/ua/server/server/exe/Makefile.in
+++ b/ua/server/server/exe/Makefile.in
@@ -78,19 +78,19 @@ CONFIG_CLEAN_VPATH_FILES =
 am__installdirs = "$(DESTDIR)$(bindir)" "$(DESTDIR)$(configdir)"
 am__EXEEXT_1 = test_opcuaserver$(EXEEXT)
 PROGRAMS = $(bin_PROGRAMS)
-am_opcuaserver_OBJECTS = opcuaserver-server_main.$(OBJEXT) \
+am_opcuaserver_OBJECTS = opcuaserver-server.$(OBJEXT) \
+	opcuaserver-server_main.$(OBJEXT) \
 	opcuaserver-server_options.$(OBJEXT)
 opcuaserver_OBJECTS = $(am_opcuaserver_OBJECTS)
 opcuaserver_LDADD = $(LDADD)
 opcuaserver_LINK = $(LIBTOOL) --tag=CXX $(AM_LIBTOOLFLAGS) \
 	$(LIBTOOLFLAGS) --mode=link $(CXXLD) $(AM_CXXFLAGS) \
 	$(CXXFLAGS) $(opcuaserver_LDFLAGS) $(LDFLAGS) -o $@
-am_test_opcuaserver_OBJECTS =  \
+am_test_opcuaserver_OBJECTS = test_opcuaserver-server.$(OBJEXT) \
 	test_opcuaserver-server_options.$(OBJEXT) \
-	test_opcuaserver-common.$(OBJEXT) \
 	test_opcuaserver-test_server_options.$(OBJEXT)
 test_opcuaserver_OBJECTS = $(am_test_opcuaserver_OBJECTS)
-test_opcuaserver_LDADD = $(LDADD)
+test_opcuaserver_DEPENDENCIES = test_addon.so
 test_opcuaserver_LINK = $(LIBTOOL) --tag=CXX $(AM_LIBTOOLFLAGS) \
 	$(LIBTOOLFLAGS) --mode=link $(CXXLD) $(AM_CXXFLAGS) \
 	$(CXXFLAGS) $(test_opcuaserver_LDFLAGS) $(LDFLAGS) -o $@
@@ -286,9 +286,10 @@ target_alias = @target_alias@
 top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
-INCLUDES = . $(URI_INCLUDES) $(UA_MAPPING_INCLUDES) $(OPC_CORE_INCLUDES)
+INCLUDES = $(URI_INCLUDES) $(UA_MAPPING_INCLUDES) $(OPC_CORE_INCLUDES)
 TESTINCLUDES = $(GTEST_INCLUDES) $(GMOCK_INCLUDES) tests
 opcuaserver_SOURCES = \
+  src/server.cpp \
   src/server_main.cpp \
   src/server_options.cpp \
   src/server_options.h
@@ -298,13 +299,14 @@ opcuaserver_LDFLAGS = -lboost_program_options -lboost_thread -lpthread -ldl  $(U
 configdir = $(sysconfdir)/opcua
 config_DATA = configs/server.config
 test_opcuaserver_SOURCES = \
+  src/server.cpp \
   src/server_options.cpp \
-  tests/common.cpp \
-  tests/common.h \
   tests/test_server_options.cpp
 
 test_opcuaserver_CPPFLAGS = $(INCLUDES) $(TESTINCLUDES)
+test_opcuaserver_LDADD = test_addon.so
 test_opcuaserver_LDFLAGS = -lboost_program_options -lboost_thread -lpthread -ldl  $(UA_MAPPING_LIBS) $(URI_LIBS) $(OPC_CORE_LIBS) $(GTEST_LIB) $(GTEST_MAIN_LIB) $(GMOCK_LIBS) -no-undefined
+CLEANFILES = test_addon.o test_addon.so
 all: all-am
 
 .SUFFIXES:
@@ -407,9 +409,10 @@ mostlyclean-compile:
 distclean-compile:
 	-rm -f *.tab.c
 
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/opcuaserver-server.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/opcuaserver-server_main.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/opcuaserver-server_options.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/test_opcuaserver-common.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/test_opcuaserver-server.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/test_opcuaserver-server_options.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/test_opcuaserver-test_server_options.Po@am__quote@
 
@@ -433,6 +436,20 @@ distclean-compile:
 @AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='$<' object='$@' libtool=yes @AMDEPBACKSLASH@
 @AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
 @am__fastdepCXX_FALSE@	$(LTCXXCOMPILE) -c -o $@ $<
+
+opcuaserver-server.o: src/server.cpp
+@am__fastdepCXX_TRUE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(opcuaserver_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT opcuaserver-server.o -MD -MP -MF $(DEPDIR)/opcuaserver-server.Tpo -c -o opcuaserver-server.o `test -f 'src/server.cpp' || echo '$(srcdir)/'`src/server.cpp
+@am__fastdepCXX_TRUE@	$(am__mv) $(DEPDIR)/opcuaserver-server.Tpo $(DEPDIR)/opcuaserver-server.Po
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='src/server.cpp' object='opcuaserver-server.o' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCXX_FALSE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(opcuaserver_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o opcuaserver-server.o `test -f 'src/server.cpp' || echo '$(srcdir)/'`src/server.cpp
+
+opcuaserver-server.obj: src/server.cpp
+@am__fastdepCXX_TRUE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(opcuaserver_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT opcuaserver-server.obj -MD -MP -MF $(DEPDIR)/opcuaserver-server.Tpo -c -o opcuaserver-server.obj `if test -f 'src/server.cpp'; then $(CYGPATH_W) 'src/server.cpp'; else $(CYGPATH_W) '$(srcdir)/src/server.cpp'; fi`
+@am__fastdepCXX_TRUE@	$(am__mv) $(DEPDIR)/opcuaserver-server.Tpo $(DEPDIR)/opcuaserver-server.Po
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='src/server.cpp' object='opcuaserver-server.obj' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCXX_FALSE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(opcuaserver_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o opcuaserver-server.obj `if test -f 'src/server.cpp'; then $(CYGPATH_W) 'src/server.cpp'; else $(CYGPATH_W) '$(srcdir)/src/server.cpp'; fi`
 
 opcuaserver-server_main.o: src/server_main.cpp
 @am__fastdepCXX_TRUE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(opcuaserver_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT opcuaserver-server_main.o -MD -MP -MF $(DEPDIR)/opcuaserver-server_main.Tpo -c -o opcuaserver-server_main.o `test -f 'src/server_main.cpp' || echo '$(srcdir)/'`src/server_main.cpp
@@ -462,6 +479,20 @@ opcuaserver-server_options.obj: src/server_options.cpp
 @AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
 @am__fastdepCXX_FALSE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(opcuaserver_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o opcuaserver-server_options.obj `if test -f 'src/server_options.cpp'; then $(CYGPATH_W) 'src/server_options.cpp'; else $(CYGPATH_W) '$(srcdir)/src/server_options.cpp'; fi`
 
+test_opcuaserver-server.o: src/server.cpp
+@am__fastdepCXX_TRUE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(test_opcuaserver_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT test_opcuaserver-server.o -MD -MP -MF $(DEPDIR)/test_opcuaserver-server.Tpo -c -o test_opcuaserver-server.o `test -f 'src/server.cpp' || echo '$(srcdir)/'`src/server.cpp
+@am__fastdepCXX_TRUE@	$(am__mv) $(DEPDIR)/test_opcuaserver-server.Tpo $(DEPDIR)/test_opcuaserver-server.Po
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='src/server.cpp' object='test_opcuaserver-server.o' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCXX_FALSE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(test_opcuaserver_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o test_opcuaserver-server.o `test -f 'src/server.cpp' || echo '$(srcdir)/'`src/server.cpp
+
+test_opcuaserver-server.obj: src/server.cpp
+@am__fastdepCXX_TRUE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(test_opcuaserver_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT test_opcuaserver-server.obj -MD -MP -MF $(DEPDIR)/test_opcuaserver-server.Tpo -c -o test_opcuaserver-server.obj `if test -f 'src/server.cpp'; then $(CYGPATH_W) 'src/server.cpp'; else $(CYGPATH_W) '$(srcdir)/src/server.cpp'; fi`
+@am__fastdepCXX_TRUE@	$(am__mv) $(DEPDIR)/test_opcuaserver-server.Tpo $(DEPDIR)/test_opcuaserver-server.Po
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='src/server.cpp' object='test_opcuaserver-server.obj' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCXX_FALSE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(test_opcuaserver_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o test_opcuaserver-server.obj `if test -f 'src/server.cpp'; then $(CYGPATH_W) 'src/server.cpp'; else $(CYGPATH_W) '$(srcdir)/src/server.cpp'; fi`
+
 test_opcuaserver-server_options.o: src/server_options.cpp
 @am__fastdepCXX_TRUE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(test_opcuaserver_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT test_opcuaserver-server_options.o -MD -MP -MF $(DEPDIR)/test_opcuaserver-server_options.Tpo -c -o test_opcuaserver-server_options.o `test -f 'src/server_options.cpp' || echo '$(srcdir)/'`src/server_options.cpp
 @am__fastdepCXX_TRUE@	$(am__mv) $(DEPDIR)/test_opcuaserver-server_options.Tpo $(DEPDIR)/test_opcuaserver-server_options.Po
@@ -475,20 +506,6 @@ test_opcuaserver-server_options.obj: src/server_options.cpp
 @AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='src/server_options.cpp' object='test_opcuaserver-server_options.obj' libtool=no @AMDEPBACKSLASH@
 @AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
 @am__fastdepCXX_FALSE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(test_opcuaserver_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o test_opcuaserver-server_options.obj `if test -f 'src/server_options.cpp'; then $(CYGPATH_W) 'src/server_options.cpp'; else $(CYGPATH_W) '$(srcdir)/src/server_options.cpp'; fi`
-
-test_opcuaserver-common.o: tests/common.cpp
-@am__fastdepCXX_TRUE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(test_opcuaserver_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT test_opcuaserver-common.o -MD -MP -MF $(DEPDIR)/test_opcuaserver-common.Tpo -c -o test_opcuaserver-common.o `test -f 'tests/common.cpp' || echo '$(srcdir)/'`tests/common.cpp
-@am__fastdepCXX_TRUE@	$(am__mv) $(DEPDIR)/test_opcuaserver-common.Tpo $(DEPDIR)/test_opcuaserver-common.Po
-@AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='tests/common.cpp' object='test_opcuaserver-common.o' libtool=no @AMDEPBACKSLASH@
-@AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
-@am__fastdepCXX_FALSE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(test_opcuaserver_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o test_opcuaserver-common.o `test -f 'tests/common.cpp' || echo '$(srcdir)/'`tests/common.cpp
-
-test_opcuaserver-common.obj: tests/common.cpp
-@am__fastdepCXX_TRUE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(test_opcuaserver_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT test_opcuaserver-common.obj -MD -MP -MF $(DEPDIR)/test_opcuaserver-common.Tpo -c -o test_opcuaserver-common.obj `if test -f 'tests/common.cpp'; then $(CYGPATH_W) 'tests/common.cpp'; else $(CYGPATH_W) '$(srcdir)/tests/common.cpp'; fi`
-@am__fastdepCXX_TRUE@	$(am__mv) $(DEPDIR)/test_opcuaserver-common.Tpo $(DEPDIR)/test_opcuaserver-common.Po
-@AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='tests/common.cpp' object='test_opcuaserver-common.obj' libtool=no @AMDEPBACKSLASH@
-@AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
-@am__fastdepCXX_FALSE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(test_opcuaserver_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o test_opcuaserver-common.obj `if test -f 'tests/common.cpp'; then $(CYGPATH_W) 'tests/common.cpp'; else $(CYGPATH_W) '$(srcdir)/tests/common.cpp'; fi`
 
 test_opcuaserver-test_server_options.o: tests/test_server_options.cpp
 @am__fastdepCXX_TRUE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(test_opcuaserver_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT test_opcuaserver-test_server_options.o -MD -MP -MF $(DEPDIR)/test_opcuaserver-test_server_options.Tpo -c -o test_opcuaserver-test_server_options.o `test -f 'tests/test_server_options.cpp' || echo '$(srcdir)/'`tests/test_server_options.cpp
@@ -737,6 +754,7 @@ install-strip:
 mostlyclean-generic:
 
 clean-generic:
+	-test -z "$(CLEANFILES)" || rm -f $(CLEANFILES)
 
 distclean-generic:
 	-test -z "$(CONFIG_CLEAN_FILES)" || rm -f $(CONFIG_CLEAN_FILES)
@@ -834,6 +852,12 @@ uninstall-am: uninstall-binPROGRAMS uninstall-configDATA
 	tags uninstall uninstall-am uninstall-binPROGRAMS \
 	uninstall-configDATA
 
+
+check : test_addon.so
+
+test_addon.so: tests/test_addon.h tests/test_addon.cpp
+	gcc -o0 -g -Wall -std=c++0x -fPIC -c tests/test_addon.cpp -o test_addon.o $(INCLUDES)
+	gcc -o0 -g -Wall -std=c++0x -shared test_addon.o -o test_addon.so $(OPC_CORE_LIBS)
 
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
