Fix build of builtin_server_addon.

--- a/ua/server/server/builtin_server/Makefile.am
+++ b/ua/server/server/builtin_server/Makefile.am
@@ -30,14 +30,14 @@ lib_LTLIBRARIES = libbuiltin_server_addon.la
 addonsinclude_HEADERS = \
   include/opc/ua/server/addons/builtin_server.h
 libbuiltin_server_addon_la_SOURCES = \
-  src/builtin_server_addon.cpp
-#  src/binary_computer.cpp
-#  src/thread.cpp
+  src/builtin_server_addon.cpp \
+  src/builtin_server_factory.cpp \
+  src/builtin_server_impl.cpp \
+  src/builtin_server_impl.h
 
 libibultin_server_addon_la_CPPFLAGS = $(INCLUDES)
 libbuiltin_server_addon_la_LDFLAGS = -lpthread -ldl  $(OPC_CORE_LIBS) $(UA_MAPPING_LIBS) -no-undefined
 
-TESTS = builtin_server_test
+#TESTS = builtin_server_test
 
-check_PROGRAMS = $(TESTS)
-
+#check_PROGRAMS = $(TESTS)
